--- a/apps/devtools-extension/panel.html
+++ b/apps/devtools-extension/panel.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- <script src="devtools.js"></script> -->
+    <h1>Martelo Vue devtools extension</h1>
+    <button id="btnStart" disabled>Start recording</button>
+    <button id="btnStop" disabled>Stop recording</button>
+    isRecording: <span id="status"></span>
+    <script src="./panel.js" type="module"></script>
   </body>
 </html>
