--- a/apps/devtools-extension/devtools/devtools.html
+++ b/apps/devtools-extension/devtools/devtools.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <script src="devtools.js"></script>
+    <script src="./devtools.js"></script>
   </body>
 </html>
