--- a/apps/devtools-extension/panels/panel.html
+++ b/apps/devtools-extension/panels/panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1>Martelo Vue devtools extension</h1>
+    <h1>Panel: Martelo Vue devtools extension</h1>
     <button id="btnStart" disabled>Start recording</button>
     <button id="btnStop" disabled>Stop recording</button>
     isRecording: <span id="status"></span>
